done with and releasing kmom06

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -47,7 +47,7 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 />
 
 <LinkCard
-  title="⚠️ kmom06 - Progressive Web Applications"
+  title="kmom06 - Progressive Web Applications"
   href="/kmom/kmom06"
   description="Vi tittar på hur vi kan göra om vår applikation till en Progressive Web Application."
 />
